--- a/app/src/main/res/drawable/avatar_default.xml
+++ b/app/src/main/res/drawable/avatar_default.xml
@@ -1,8 +1,8 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
+<vector android:height="40dp"
+    android:viewportHeight="4000"
     android:viewportWidth="4000"
-    android:viewportHeight="4000">
+    android:width="40dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <path
         android:fillColor="#675F7F"
         android:pathData="M2000,2000m-1930,0a1930,1930 0,1 1,3860 0a1930,1930 0,1 1,-3860 0"
