--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,8 +21,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/spacing_normal_16">
+            android:layout_gravity="center">
+
 
             <ImageButton
                 android:id="@+id/btn_switch_theme"
@@ -34,20 +34,29 @@
                 android:background="@drawable/btn_round_bg"
                 android:src="@drawable/ic_switch_day_night" />
 
-            <ImageView
+            <!--<ImageView
                 android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/avatar_round_size"
                 android:layout_height="@dimen/avatar_round_size"
                 android:layout_centerHorizontal="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/avatar_default" />-->
+
+            <ru.skillbranch.devintensive.ui.custom.CircleImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="@dimen/avatar_round_size"
+                android:layout_height="@dimen/avatar_round_size"
+                android:layout_centerHorizontal="true"
+                android:scaleType="centerInside"
                 android:src="@drawable/avatar_default" />
 
             <ImageButton
                 android:id="@+id/btn_edit"
                 android:layout_width="@dimen/btn_round_size_40"
                 android:layout_height="@dimen/btn_round_size_40"
-                android:layout_marginLeft="@dimen/spacing_huge_32"
+                android:layout_marginStart="@dimen/spacing_huge_32"
                 android:layout_marginTop="36dp"
-                android:layout_toRightOf="@id/iv_avatar"
+                android:layout_toEndOf="@id/iv_avatar"
                 android:background="@drawable/btn_round_bg"
                 android:src="@drawable/ic_edit_black_24dp" />
 
@@ -58,7 +67,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/iv_avatar"
                 android:layout_centerHorizontal="true"
-                android:text="John Doe" />
+                android:layout_marginTop="@dimen/spacing_normal_16"
+                tools:text="John Doe" />
 
             <TextView
                 android:id="@+id/tv_rank"
@@ -67,10 +77,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_nick_name"
                 android:layout_centerHorizontal="true"
-                android:text="Junior Android Developer" />
+                tools:text="Junior Android Developer" />
 
         </RelativeLayout>
-
     </FrameLayout>
 
     <LinearLayout
@@ -93,7 +102,7 @@
                 style="@style/Profile.Metrics.Value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_sp_24"
+                android:drawableStart="@drawable/ic_sp_24"
                 android:text="0" />
 
             <TextView
@@ -124,7 +133,7 @@
                 style="@style/Profile.Metrics.Value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_respect_24"
+                android:drawableStart="@drawable/ic_respect_24"
                 android:text="0" />
 
             <TextView
@@ -133,7 +142,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/profile_label_respect" />
         </LinearLayout>
-
     </LinearLayout>
 
     <RelativeLayout
@@ -159,37 +167,33 @@
                 style="@style/Profile.EditText.Single"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Имя"
+                android:hint="@string/profile_hint_first_name"
                 android:imeOptions="actionNext"
-                android:inputType="textPersonName"
-                tools:text="John" />
+                android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/wr_first_name"
-            android:layout_marginStart="@dimen/spacing_normal_16"
-            android:layout_toEndOf="@id/ic_avatar">
+            android:layout_marginLeft="@dimen/spacing_normal_16"
+            android:layout_toRightOf="@id/ic_avatar">
 
             <EditText
                 android:id="@+id/et_last_name"
                 style="@style/Profile.EditText.Single"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Фамилия"
+                android:hint="@string/profile_hint_last_name"
                 android:imeOptions="actionNext"
-                android:inputType="textPersonName"
-                tools:text="Doe" />
-
+                android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
-
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginStart="@dimen/space_maximum_72"
+        android:layout_marginLeft="@dimen/space_maximum_72"
         android:background="?attr/colorDivider" />
 
     <LinearLayout
@@ -207,7 +211,7 @@
             android:id="@+id/wr_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_normal_16"
+            android:layout_marginLeft="@dimen/spacing_normal_16"
             app:counterMaxLength="128">
 
             <EditText
@@ -215,11 +219,8 @@
                 style="@style/Profile.EditText.MultiLine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="О себе"
-                android:inputType="textMultiLine" />
-
+                android:hint="@string/profile_hint_about" />
         </com.google.android.material.textfield.TextInputLayout>
-
     </LinearLayout>
 
     <View
@@ -244,7 +245,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/spacing_normal_16"
-            android:layout_marginRight="@dimen/spacing_normal_16"
             android:layout_weight="1">
 
             <EditText
@@ -252,10 +252,9 @@
                 style="@style/Profile.EditText.Single"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Репозиторий"
+                android:hint="@string/profile_hint_repository"
                 android:imeOptions="actionDone"
                 android:inputType="textUri" />
-
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
@@ -263,7 +262,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/spacing_normal_16"
-            android:src="@drawable/ic_eye_24dp" />
+            android:src="@drawable/ic_eye_24dp"
+            android:layout_marginLeft="@dimen/spacing_normal_16" />
     </LinearLayout>
 </LinearLayout>
