--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,11 +5,11 @@
     </style>
 
     <style name="Profile.EditText" parent="Profile">
-        <item name="android:textColor">?attr/colorPrimary</item>
-        <item name="android:paddingTop">4dp</item>
         <item name="android:enabled">false</item>
-        <item name="android:focusableInTouchMode">false</item>
         <item name="android:focusable">false</item>
+        <item name="android:focusableInTouchMode">false</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
     </style>
 
     <style name="Profile.EditText.Single" parent="Profile.EditText">
@@ -44,17 +44,20 @@
     </style>
 
     <style name="Profile.Metrics.Value" parent="Profile.Metrics">
+        <item name="android:textSize">@dimen/font_large_20</item>
         <item name="android:drawablePadding">4dp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textSize">@dimen/font_large_20</item>
     </style>
 
     <style name="Profile.InfoItem">
         <item name="android:paddingTop">@dimen/spacing_normal_16</item>
-        <item name="android:paddingBottom">5dp</item>
-        <item name="android:paddingLeft">@dimen/spacing_normal_16</item>
         <item name="android:paddingRight">@dimen/spacing_normal_16</item>
+        <item name="android:paddingLeft">@dimen/spacing_normal_16</item>
+        <item name="android:paddingBottom">5dp</item>
         <item name="android:minHeight">72dp</item>
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 </resources>
